fixing the scroll issue that prevented page refresh on mobile

--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
 }
 
 html, body {
-  height: 100%;
+  height: auto;
   margin: 0;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 body {
